[package]
name = "giantbomb-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "giantbomt_rs"

[dependencies]
actix-web = "4.0.0-beta.10"
actix-http = "3.0.0-beta.11"
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json"] }
tracing = { version = "0.1.29", features = ["log"] }
serde = "1.0.130"
serde_json = "1.0.69"
rand = "0.8.4"

[dev-dependencies]
actix-rt = "2"
tokio = "1"
