[package]
name = "giantbomb-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "giantbomb_rs"

[dependencies]
actix-web = "4.0.0-beta.10"
actix-http = "3.0.0-beta.11"
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-tracing = { version = "0.1.0", features = ["opentelemetry_0_16"] }
tracing = { version = "0.1.29", features = ["log"] }
serde = "1.0.130"
serde_json = "1.0.69"
rand = "0.8.4"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-actix-web = { version = "0.5.0-beta.1", features = ["opentelemetry_0_16"] }
tracing-log = "0.1.2"
tracing-opentelemetry = "0.13.0"
opentelemetry = { version = "0.14.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.13.0", features = ["tokio"] }

[dev-dependencies]
actix-rt = "2"
tokio = "1"
